# spotty_env

./: pyproject.toml
spotty_env/: env.py
spotty_env/robot/: spotty.urdf
spotty_env/robot/meshes/: Camera_1.stl  ComponentsHolder_1.stl  Covers_1.stl  HindLimb_1.stl  HindLimb__1__1.stl  HindLimb__1___1__1.stl  HindLimb__2__1.stl  Shoulder_1.stl  Shoulder__1__1.stl  Shoulder__1___1__1.stl  Shoulder__2__1.stl  Wrist__1___1__1.stl  Wrist__1___2__1.stl  Wrist__2___1__1.stl  Wrist__4__1.stl  base_link.stl
spotty_env/robot/meshes/Camera_1/: Camera_1.usd
spotty_env/robot/meshes/ComponentsHolder_1/: ComponentsHolder_1.usd
spotty_env/robot/meshes/Covers_1/: Covers_1.usd
spotty_env/robot/meshes/HindLimb_1/: HindLimb_1.usd
spotty_env/robot/meshes/HindLimb__1__1/: HindLimb__1__1.usd
spotty_env/robot/meshes/HindLimb__1___1__1/: HindLimb__1___1__1.usd
spotty_env/robot/meshes/HindLimb__2__1/: HindLimb__2__1.usd
spotty_env/robot/meshes/Shoulder_1/: Shoulder_1.usd
spotty_env/robot/meshes/Shoulder__1__1/: Shoulder__1__1.usd
spotty_env/robot/meshes/Shoulder__1___1__1/: Shoulder__1___1__1.usd
spotty_env/robot/meshes/Shoulder__2__1/: Shoulder__2__1.usd
spotty_env/robot/meshes/Wrist__1___1__1/: Wrist__1___1__1.usd
spotty_env/robot/meshes/Wrist__1___2__1/: Wrist__1___2__1.usd
spotty_env/robot/meshes/Wrist__2___1__1/: Wrist__2___1__1.usd
spotty_env/robot/meshes/Wrist__4__1/: Wrist__4__1.usd
spotty_env/robot/meshes/base_link/: base_link.usd
