[project]
name = "spotty-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "genesis-world",
    "numpy",
    "torch>=2.9.1",
    "markupsafe<3.0.0",  # Pin to version compatible with Python 3.11
]

# pyproject.toml
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }